--- a/src/StaffNook.Infrastructure/StaffNook.Infrastructure.csproj
+++ b/src/StaffNook.Infrastructure/StaffNook.Infrastructure.csproj
@@ -21,22 +21,11 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.13" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
-
-
+    
     <ItemGroup>
       <ProjectReference Include="..\StaffNook.Domain\StaffNook.Domain.csproj" />
-
-
-
-
     </ItemGroup>
-
-
-
-
-
-
-
 </Project>
