added custom auth logic & small core fixes

--- a/src/StaffNook.Backend/appsettings.Development.json
+++ b/src/StaffNook.Backend/appsettings.Development.json
@@ -1,11 +1,20 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=StaffNook;Username=postgres;Password=h0z1dkg"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=StaffNook;Username=postgres;Password=root"
   },
   "JWT": {
     "SecurityKey": "dGVzdEtleSExMjNrZXk1=",
-    "LifeTime": 60,
+    "LifeTime": 86400,
     "Issuer": "TestIssuer",
     "Audience": "TestAuthClient"
+  },
+  "FileStorageConfig": {
+    "Endpoint": "https://localhost:2222",
+    "AccessKey": "f0VaPQUuFnG0czBgfMh0",
+    "SecretKey": "zSYOmGkSfRbhz9TXNC9N9W1WRrWZO6HssJvilKVI",
+    "ForcePathStyle": true,
+    "TempBucket": "temp",
+    "PermanentBucket": "permanent",
+    "PreviewUrl": "https://localhost:2222"
   }
 }
