--- a/src/StaffNook.Backend/appsettings.Development.json
+++ b/src/StaffNook.Backend/appsettings.Development.json
@@ -9,12 +9,12 @@
     "Audience": "TestAuthClient"
   },
   "FileStorageConfig": {
-    "Endpoint": "https://localhost:2222",
-    "AccessKey": "f0VaPQUuFnG0czBgfMh0",
-    "SecretKey": "zSYOmGkSfRbhz9TXNC9N9W1WRrWZO6HssJvilKVI",
+    "Endpoint": "https://s3.ipanagushin.dev",
+    "AccessKey": "SuyZByM88Ech9d04OgNf",
+    "SecretKey": "z8MhSvX45q3HdAubnawlkHOr13FM15hR6a7j1fS7",
     "ForcePathStyle": true,
     "TempBucket": "temp",
     "PermanentBucket": "permanent",
-    "PreviewUrl": "https://localhost:2222"
+    "PreviewUrl": "https://s3.ipanagushin.dev"
   }
 }
