--- a/src/StaffNook.Infrastructure/StaffNook.Infrastructure.csproj
+++ b/src/StaffNook.Infrastructure/StaffNook.Infrastructure.csproj
@@ -8,6 +8,7 @@
 
 
     <ItemGroup>
+        <PackageReference Include="AWSSDK.S3" Version="3.7.305.5" />
         <PackageReference Include="FluentValidation" Version="11.8.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
         <PackageReference Include="MicroElements.Swashbuckle.FluentValidation" Version="5.7.0" />
@@ -26,5 +27,9 @@
     
     <ItemGroup>
       <ProjectReference Include="..\StaffNook.Domain\StaffNook.Domain.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Migrations\" />
     </ItemGroup>
 </Project>
