--- a/src/StaffNook.Backend/StaffNook.Backend.csproj
+++ b/src/StaffNook.Backend/StaffNook.Backend.csproj
@@ -18,6 +18,7 @@
 
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="7.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
